produce and consume kafka
